--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
   justify-content: center;
 }
 
-#cat-gif {
+#dog-gif {
   width: 190px;
   height: 190px;
   border-radius: 18px;
@@ -73,7 +73,7 @@ body {
   transition: opacity 0.25s ease, transform 0.25s ease;
 }
 
-#cat-gif.fade-out {
+#dog-gif.fade-out {
   opacity: 0;
   transform: translateY(6px) scale(0.98);
 }
@@ -238,7 +238,7 @@ button {
     font-size: 1.4rem;
   }
 
-  #cat-gif {
+  #dog-gif {
     width: 170px;
     height: 170px;
   }
